# aquarium-python-api

./: .gitignore  CHANGELOG.md  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: deploy.yml  hello.yml  publish.yml
aquarium/: aquarium.py  edge.py  element.py  entity.py  events.py  exceptions.py  item.py  sso.py  tools.py  utils.py
aquarium/items/: asset.py  bot.py  organisation.py  project.py  task.py  template.py  user.py  usergroup.py
docs/: Makefile
docs/source/: changelog.md  conf.py  examples.md  index.md  introduction.md  performance.md  quickstart.md  support.md  troubleshoot.md
docs/source/reference/: aquarium.md  edge.md  events.md  item.md  utils.md
docs/source/reference/items/: asset.md  bot.md  organisation.md  playlist.md  project.md  shot.md  task.md  template.md  user.md  usergroup.md
