[metadata]
name = aquarium-python-api
description = Aquarium python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://docs.fatfish.app/dev/python/index.html
project_urls =
    Documentation = https://docs.fatfish.app/dev/python/index.html
    Source = https://github.com/fatfish-lab/aquarium-python-api
    Aquarium = https://fatfi.sh/aquarium
version = 1.0.18
author = Fatfish Lab
author_email = lab@fatfi.sh
keywords = fatfish, lab, aquarium, studio, project, management, nodal, sdk, rest, cgi, vfx, api, python
license = gpl-3.0
license_file = LICENSE.md
platform = any
python_requires = '>=2.4'
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
packages = find:
setup_requires =
    setuptools>=30.3.0
include_package_data = True
install_requires =
   requests==2.25.1
   dotmap==1.3.23
   pytz>=2020.5

[options.packages.find]
exclude =
    tests
    docs
    examples

[options.extras_require]
dev =
    sphinx>=3.4.3
    furo>=0.5.1
    sphinx-copybutton>=0.3.1
    myst-parser>=0.13.3